Clean and update student management project