@@ -1,11 +1,8 @@
 package com.student.service;
 
-import java.io.File;
-import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -15,14 +12,15 @@ import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.student.entity.AuditLog;
 import com.student.entity.Role;
 import com.student.entity.Student;
 import com.student.enums.StudentStatus;
 import com.student.exception.EmailAlreadyExistsException;
 import com.student.exception.ResourceNotFoundException;
+import com.student.repository.AuditLogRepository;
 import com.student.repository.RoleRepository;
 import com.student.repository.StudentRepository;
 
@@ -30,7 +28,7 @@ import com.student.repository.StudentRepository;
 public class StudentService {
 
     @Autowired
-    private StudentRepository repository;
+    private StudentRepository repo;
 
     @Autowired
     private RoleRepository roleRepository;
@@ -39,320 +37,130 @@ public class StudentService {
     private PasswordEncoder passwordEncoder;
 
     @Autowired
-    private AuditLogService auditLogService;
+    private AuditLogRepository auditLogRepository;
 
-
- // =====================================================
- // ADD STUDENT
- // =====================================================
-
- public Student addStudent(
-         Student student,
-         String ipAddress,
-         Authentication authentication) {
-
-     // =================================================
-     // ENCODE PASSWORD
-     // =================================================
-
-     if (student.getPassword() != null
-             && !student.getPassword().startsWith("$2a$")
-             && !student.getPassword().startsWith("$2b$")
-             && !student.getPassword().startsWith("$2y$")) {
-
-         student.setPassword(
-                 passwordEncoder.encode(
-                         student.getPassword()
-                 )
-         );
-     }
-
-
-     // =================================================
-     // LOAD ROLE
-     // =================================================
-
-     if (student.getRole() != null
-             && student.getRole().getId() != null) {
-
-         Role role =
-                 roleRepository.findById(
-                         student.getRole().getId()
-                 ).orElseThrow(() ->
-                         new RuntimeException(
-                                 "Role not found"
-                         ));
-
-         student.setRole(role);
-     }
-
-
-     // =================================================
-     // DEFAULT STATUS
-     // =================================================
-
-     student.setStatus(
-             StudentStatus.ACTIVE
-     );
-
-     student.setIsDeleted(
-             "false"
-     );
-
-
-     // =================================================
-     // SAVE STUDENT
-     // =================================================
-
-     Student savedStudent =
-             repository.save(student);
-
-
-     // =================================================
-     // GET LOGGED-IN USER
-     // THIS IS THE PERSON WHO PERFORMED THE ACTION
-     // =================================================
-
-     String performedBy = "SYSTEM";
-
-     if (authentication != null
-             && authentication.getName() != null
-             && !authentication.getName().trim().isEmpty()) {
-
-         performedBy =
-                 authentication.getName();
-     }
-
-
-     // =================================================
-     // GET LOGGED-IN USER ROLE
-     // =================================================
-
-     String performedByRole = "ROLE_ADMIN";
-
-     if (authentication != null
-             && authentication.getAuthorities() != null) {
-
-         performedByRole =
-                 authentication.getAuthorities()
-                         .stream()
-                         .map(authority ->
-                                 authority.getAuthority())
-                         .filter(role ->
-                                 role.equals("ROLE_ADMIN")
-                                 || role.equals("ROLE_STUDENT"))
-                         .findFirst()
-                         .orElse("ROLE_ADMIN");
-     }
-
-
-     // =================================================
-     // ENTITY NAME
-     // THIS IS THE USER WHO WAS CREATED
-     // =================================================
-
-     String entityName;
-
-     if (savedStudent.getRole() != null
-             && savedStudent.getRole().getName() != null
-             && "ROLE_ADMIN".equalsIgnoreCase(
-                     savedStudent.getRole().getName())) {
-
-         entityName = "ADMIN";
-
-     } else if (savedStudent.getRole() != null
-             && savedStudent.getRole().getName() != null
-             && "ROLE_STUDENT".equalsIgnoreCase(
-                     savedStudent.getRole().getName())) {
-
-         entityName = "STUDENT";
-
-     } else {
-
-         entityName = "USER";
-     }
-
-
-     // =================================================
-     // DESCRIPTION
-     // =================================================
-
-     String message;
-
-     if ("STUDENT".equals(entityName)) {
-
-         message =
-                 "Student created successfully";
-
-     } else if ("ADMIN".equals(entityName)) {
-
-         message =
-                 "Admin created successfully";
-
-     } else {
-
-         message =
-                 "User created successfully";
-     }
-
-
-     // =================================================
-     // AUDIT LOG
-     // =================================================
-     // performedBy       = logged-in admin
-     // performedByRole   = ROLE_ADMIN
-     // entityId          = created student's ID
-     // entityName        = STUDENT
-     // =================================================
-
-     auditLogService.createLog(
-             savedStudent.getId(),
-             performedBy,
-             performedByRole,
-             "CREATE",
-             entityName,
-             savedStudent.getId(),
-             message,
-             ipAddress
-     );
-
-
-     return savedStudent;
- }
- 
- 
 
     // =====================================================
-    // GET ALL ACTIVE USERS
+    // ADD STUDENT
+    // =====================================================
+
+    public Student addStudent(Student student) {
+        return repo.save(student);
+    }
+
+
+    // =====================================================
+    // GET ALL STUDENTS
     // =====================================================
 
     public List<Student> getAllStudents() {
-
-        return repository.findByStatusAndIsDeleted(
-                StudentStatus.ACTIVE,
-                "false"
-        );
+        return repo.findAll();
     }
 
 
     // =====================================================
-    // GET USER BY ID
+    // GET STUDENT BY ID
     // =====================================================
 
     public Student getStudentById(Long id) {
-
-        return repository.findByIdAndIsDeleted(
-                id,
-                "false"
-        ).orElseThrow(() ->
-                new ResourceNotFoundException(
-                        "Student not found with id : " + id
-                ));
+        return repo.findById(id)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Student not found with id : " + id
+                        )
+                );
     }
 
 
     // =====================================================
-    // UPDATE USER
+    // FIND STUDENT BY EMAIL
+    // USED BY StudentPageController
+    // =====================================================
+
+    public Optional<Student> findByEmail(String email) {
+        return repo.findByEmail(email);
+    }
+
+
+    // =====================================================
+    // GET STUDENT BY EMAIL
+    // =====================================================
+
+    public Student getStudentByEmail(String email) {
+        return repo.findByEmail(email)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Student not found with email : " + email
+                        )
+                );
+    }
+
+
+    // =====================================================
+    // UPDATE STUDENT
     // =====================================================
 
     public Student updateStudent(
             Long id,
-            Student student,
-            String ipAddress) {
+            Student updateStudent) {
 
-        Student existing =
-                getStudentById(id);
+        Student student = getStudentById(id);
 
-
-        if (!existing.getEmail().equals(
-                student.getEmail())) {
-
-            if (repository.existsByEmailAndStatusAndIsDeleted(
-                    student.getEmail(),
-                    StudentStatus.ACTIVE,
-                    "false")) {
-
-                throw new EmailAlreadyExistsException(
-                        "Email already exists"
-                );
-            }
+        if (updateStudent.getName() != null) {
+            student.setName(updateStudent.getName());
         }
 
+        student.setAge(updateStudent.getAge());
 
-        existing.setName(
-                student.getName()
-        );
-
-        existing.setAge(
-                student.getAge()
-        );
-
-        existing.setDepartment(
-                student.getDepartment()
-        );
-
-        existing.setEmail(
-                student.getEmail()
-        );
-
-        existing.setContactNo(
-                student.getContactNo()
-        );
-
-        existing.setCity(
-                student.getCity()
-        );
-
-        existing.setAddress(
-                student.getAddress()
-        );
-
-
-        Student updatedStudent =
-                repository.save(existing);
-
-
-        // =================================================
-        // ROLE
-        // =================================================
-
-        String roleName = "ROLE_STUDENT";
-
-        if (updatedStudent.getRole() != null
-                && updatedStudent.getRole().getName() != null) {
-
-            roleName =
-                    updatedStudent.getRole().getName();
+        if (updateStudent.getDepartment() != null) {
+            student.setDepartment(
+                    updateStudent.getDepartment()
+            );
         }
 
+        if (updateStudent.getEmail() != null) {
+            student.setEmail(
+                    updateStudent.getEmail()
+            );
+        }
 
-        // =================================================
-        // ENTITY
-        // =================================================
+        if (updateStudent.getCity() != null) {
+            student.setCity(
+                    updateStudent.getCity()
+            );
+        }
 
-        String entityName =
-                "ROLE_ADMIN".equalsIgnoreCase(roleName)
-                        ? "ADMIN"
-                        : "STUDENT";
+        if (updateStudent.getPassword() != null) {
+            student.setPassword(
+                    updateStudent.getPassword()
+            );
+        }
 
+        if (updateStudent.getContactNo() != null) {
+            student.setContactNo(
+                    updateStudent.getContactNo()
+            );
+        }
 
-        // =================================================
-        // AUDIT
-        // =================================================
+        if (updateStudent.getAddress() != null) {
+            student.setAddress(
+                    updateStudent.getAddress()
+            );
+        }
 
-        auditLogService.createLog(
-                updatedStudent.getId(),
-                updatedStudent.getEmail(),
-                roleName,
-                "UPDATE",
-                entityName,
-                updatedStudent.getId(),
-                "Student updated successfully",
-                ipAddress
-        );
+        if (updateStudent.getStatus() != null) {
+            student.setStatus(
+                    updateStudent.getStatus()
+            );
+        }
 
+        if (updateStudent.getProfilePhoto() != null) {
+            student.setProfilePhoto(
+                    updateStudent.getProfilePhoto()
+            );
+        }
 
-        return updatedStudent;
+        return repo.save(student);
     }
 
 
@@ -360,1031 +168,18 @@ public class StudentService {
     // DELETE STUDENT
     // =====================================================
 
-    public void deleteStudent(Long id, String ipAddress) {
-
-        Student student =
-                getStudentById(id);
-
-        student.setIsDeleted("true");
-
-        student.setStatus(
-                StudentStatus.INACTIVE
-        );
-
-
-        Student deletedStudent =
-                repository.save(student);
-
-
-        String roleName = "ROLE_STUDENT";
-
-        if (deletedStudent.getRole() != null
-                && deletedStudent.getRole().getName() != null) {
-
-            roleName =
-                    deletedStudent.getRole().getName();
-        }
-
-
-        String entityName;
-
-        if ("ROLE_ADMIN".equalsIgnoreCase(roleName)) {
-
-            entityName = "ADMIN";
-
-        } else if ("ROLE_STUDENT".equalsIgnoreCase(roleName)) {
-
-            entityName = "STUDENT";
-
-        } else {
-
-            entityName = "USER";
-        }
-
-
-        auditLogService.createLog(
-                deletedStudent.getId(),
-                deletedStudent.getEmail(),
-                roleName,
-                "DELETE",
-                entityName,
-                deletedStudent.getId(),
-                "Student deleted successfully",
-                ipAddress
-        );
+    public void deleteStudent(Long id) {
+        Student student = getStudentById(id);
+        repo.delete(student);
     }
 
-
- // =====================================================
- // REGISTER STUDENT / ADMIN
- // =====================================================
-
- public Student signup(
-         Student student,
-         String roleId,
-         MultipartFile profilePhoto,
-         String ipAddress,
-         Authentication authentication)
-         throws IOException {
-
-     // =================================================
-     // CHECK EMAIL
-     // =================================================
-
-     if (repository.findByEmailAndStatusAndIsDeleted(
-             student.getEmail(),
-             StudentStatus.ACTIVE,
-             "false"
-     ).isPresent()) {
-
-         throw new EmailAlreadyExistsException(
-                 "Email already exists"
-         );
-     }
-
-
-     // =================================================
-     // CHECK ROLE
-     // =================================================
-
-     if (roleId == null
-             || roleId.trim().isEmpty()) {
-
-         throw new RuntimeException(
-                 "Role is required"
-         );
-     }
-
-
-     Long roleIdValue;
-
-     try {
-
-         roleIdValue =
-                 Long.parseLong(roleId);
-
-     } catch (NumberFormatException e) {
-
-         throw new RuntimeException(
-                 "Invalid role"
-         );
-     }
-
-
-     // =================================================
-     // LOAD ROLE
-     // =================================================
-
-     Role role =
-             roleRepository.findById(
-                     roleIdValue
-             ).orElseThrow(() ->
-                     new RuntimeException(
-                             "Role not found"
-                     ));
-
-
-     student.setRole(role);
-
-
-     // =================================================
-     // PROFILE PHOTO
-     // =================================================
-
-     if (profilePhoto != null
-             && !profilePhoto.isEmpty()) {
-
-         String contentType =
-                 profilePhoto.getContentType();
-
-
-         if (contentType == null
-                 || !(contentType.equalsIgnoreCase(
-                             "image/jpeg")
-                 || contentType.equalsIgnoreCase(
-                             "image/jpg")
-                 || contentType.equalsIgnoreCase(
-                             "image/png"))) {
-
-             throw new RuntimeException(
-                     "Only JPG, JPEG and PNG images are allowed."
-             );
-         }
-
-
-         long maxFileSize =
-                 5L * 1024L * 1024L;
-
-
-         if (profilePhoto.getSize()
-                 > maxFileSize) {
-
-             throw new RuntimeException(
-                     "Profile photo must be less than 5 MB."
-             );
-         }
-
-
-         // =================================================
-         // FOLDER
-         // =================================================
-
-         String folderName;
-
-         if ("ROLE_ADMIN".equalsIgnoreCase(
-                 role.getName())) {
-
-             folderName =
-                     "Admin photos";
-
-         } else if ("ROLE_STUDENT".equalsIgnoreCase(
-                 role.getName())) {
-
-             folderName =
-                     "Student photos";
-
-         } else {
-
-             throw new RuntimeException(
-                     "Invalid role for profile photo"
-             );
-         }
-
-
-         String uploadDirectory =
-                 new File(
-                         "src/main/resources/static/uploads/Profile/"
-                                 + folderName
-                 ).getAbsolutePath();
-
-
-         File directory =
-                 new File(uploadDirectory);
-
-
-         if (!directory.exists()) {
-
-             if (!directory.mkdirs()) {
-
-                 throw new IOException(
-                         "Unable to create upload directory"
-                 );
-             }
-         }
-
-
-         // =================================================
-         // EXTENSION
-         // =================================================
-
-         String originalFileName =
-                 profilePhoto.getOriginalFilename();
-
-         String extension = "";
-
-
-         if (originalFileName != null
-                 && originalFileName.contains(".")) {
-
-             extension =
-                     originalFileName.substring(
-                             originalFileName.lastIndexOf(".")
-                     ).toLowerCase();
-         }
-
-
-         // =================================================
-         // UNIQUE NAME
-         // =================================================
-
-         String fileName =
-                 UUID.randomUUID()
-                         .toString()
-                         + extension;
-
-
-         File saveFile =
-                 new File(
-                         directory,
-                         fileName
-                 );
-
-
-         profilePhoto.transferTo(
-                 saveFile
-         );
-
-
-         student.setProfilePhoto(
-                 fileName
-         );
-     }
-
-
-     // =================================================
-     // PASSWORD
-     // =================================================
-
-     student.setPassword(
-             passwordEncoder.encode(
-                     student.getPassword()
-             )
-     );
-
-
-     student.setStatus(
-             StudentStatus.ACTIVE
-     );
-
-     student.setIsDeleted(
-             "false"
-     );
-
-
-     // =================================================
-     // SAVE
-     // =================================================
-
-     Student savedStudent =
-             repository.save(student);
-
-
-     // =================================================
-     // CREATED USER ROLE
-     // =================================================
-
-     String createdUserRole =
-             "ROLE_STUDENT";
-
-     if (savedStudent.getRole() != null
-             && savedStudent.getRole().getName() != null) {
-
-         createdUserRole =
-                 savedStudent.getRole().getName();
-     }
-
-
-     // =================================================
-     // WHO PERFORMED THE ACTION
-     // =================================================
-
-     String performedBy =
-             "SYSTEM";
-
-     String performedByRole =
-             "SYSTEM";
-
-
-     if (authentication != null) {
-
-         // Logged-in user's email
-         if (authentication.getName() != null
-                 && !authentication.getName().trim().isEmpty()) {
-
-             performedBy =
-                     authentication.getName();
-         }
-
-
-         // Logged-in user's role
-         if (authentication.getAuthorities() != null) {
-
-             performedByRole =
-                     authentication.getAuthorities()
-                             .stream()
-                             .map(authority ->
-                                     authority.getAuthority())
-                             .filter(roleName ->
-                                     roleName != null
-                                     && roleName.startsWith("ROLE_"))
-                             .findFirst()
-                             .orElse("SYSTEM");
-         }
-     }
-
-
-     // =================================================
-     // ENTITY NAME
-     // =================================================
-
-     String entityName;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(
-             createdUserRole)) {
-
-         entityName =
-                 "ADMIN";
-
-     } else if ("ROLE_STUDENT".equalsIgnoreCase(
-             createdUserRole)) {
-
-         entityName =
-                 "STUDENT";
-
-     } else {
-
-         entityName =
-                 "USER";
-     }
-
-
-     // =================================================
-     // MESSAGE
-     // =================================================
-
-     String registrationMessage;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(
-             createdUserRole)) {
-
-         registrationMessage =
-                 "New admin registered successfully";
-
-     } else if ("ROLE_STUDENT".equalsIgnoreCase(
-             createdUserRole)) {
-
-         registrationMessage =
-                 "New student registered successfully";
-
-     } else {
-
-         registrationMessage =
-                 "New user registered successfully";
-     }
-
-
-     // =================================================
-     // AUDIT LOG
-     // =================================================
-     //
-     // IMPORTANT:
-     //
-     // username  = logged-in user who performed action
-     // role      = logged-in user's role
-     // entity    = user who was created
-     //
-     // =================================================
-
-     auditLogService.createLog(
-             savedStudent.getId(),
-             performedBy,
-             performedByRole,
-             "REGISTRATION",
-             entityName,
-             savedStudent.getId(),
-             registrationMessage,
-             ipAddress
-     );
-
-
-     return savedStudent;
- }
-
-    // =====================================================
-    // GET USER BY EMAIL
-    // =====================================================
-
-    public Student getStudentByEmail(
-            String email) {
-
-        return repository
-                .findByEmailAndStatusAndIsDeleted(
-                        email,
-                        StudentStatus.ACTIVE,
-                        "false"
-                )
-                .orElseThrow(() ->
-                        new ResourceNotFoundException(
-                                "Student not found with email : "
-                                        + email
-                        ));
-    }
-
-
-    // =====================================================
-    // SAVE STUDENT
-    // =====================================================
-
-    public Student saveStudent(
-            Student student) {
-
-        if (student.getPassword() != null
-                && !student.getPassword().startsWith("$2a$")
-                && !student.getPassword().startsWith("$2b$")
-                && !student.getPassword().startsWith("$2y$")) {
-
-            student.setPassword(
-                    passwordEncoder.encode(
-                            student.getPassword()
-                    )
-            );
-        }
-
-
-        if (student.getStatus() == null) {
-
-            student.setStatus(
-                    StudentStatus.ACTIVE
-            );
-        }
-
-
-        student.setIsDeleted(
-                "false"
-        );
-
-
-        return repository.save(student);
-    }
-
-
-    
- // =====================================================
- // UPDATE PROFILE + PHOTO
- // =====================================================
-
- public void updateProfile(
-         String email,
-         Student updatedStudent,
-         MultipartFile profilePhoto,
-         String ipAddress)
-         throws IOException {
-
-     Student student =
-             repository.findByEmailAndStatusAndIsDeleted(
-                     email,
-                     StudentStatus.ACTIVE,
-                     "false"
-             )
-             .orElseThrow(() ->
-                     new ResourceNotFoundException(
-                             "Student not found"
-                     ));
-
-     // =================================================
-     // CHECK WHETHER PROFILE DETAILS ARE CHANGED
-     // =================================================
-
-     boolean profileChanged = false;
-
-     if (!java.util.Objects.equals(
-             student.getName(),
-             updatedStudent.getName())) {
-
-         profileChanged = true;
-     }
-
-     if (!java.util.Objects.equals(
-             student.getAge(),
-             updatedStudent.getAge())) {
-
-         profileChanged = true;
-     }
-
-     if (!java.util.Objects.equals(
-             student.getDepartment(),
-             updatedStudent.getDepartment())) {
-
-         profileChanged = true;
-     }
-
-     if (!java.util.Objects.equals(
-             student.getCity(),
-             updatedStudent.getCity())) {
-
-         profileChanged = true;
-     }
-
-     if (!java.util.Objects.equals(
-             student.getContactNo(),
-             updatedStudent.getContactNo())) {
-
-         profileChanged = true;
-     }
-
-     if (!java.util.Objects.equals(
-             student.getAddress(),
-             updatedStudent.getAddress())) {
-
-         profileChanged = true;
-     }
-
-     // =================================================
-     // UPDATE PROFILE DETAILS
-     // =================================================
-
-     student.setName(
-             updatedStudent.getName()
-     );
-
-     student.setAge(
-             updatedStudent.getAge()
-     );
-
-     student.setDepartment(
-             updatedStudent.getDepartment()
-     );
-
-     student.setCity(
-             updatedStudent.getCity()
-     );
-
-     student.setContactNo(
-             updatedStudent.getContactNo()
-     );
-
-     student.setAddress(
-             updatedStudent.getAddress()
-     );
-
-     // =================================================
-     // CHECK WHETHER PHOTO IS UPLOADED
-     // =================================================
-
-     boolean photoChanged =
-             profilePhoto != null
-                     && !profilePhoto.isEmpty();
-
-     // =================================================
-     // NEW PHOTO
-     // =================================================
-
-     if (photoChanged) {
-
-         String contentType =
-                 profilePhoto.getContentType();
-
-         if (contentType == null
-                 || !(contentType.equalsIgnoreCase(
-                             "image/jpeg")
-                 || contentType.equalsIgnoreCase(
-                             "image/jpg")
-                 || contentType.equalsIgnoreCase(
-                             "image/png"))) {
-
-             throw new RuntimeException(
-                     "Only JPG, JPEG and PNG images are allowed."
-             );
-         }
-
-         long maxFileSize =
-                 5L * 1024L * 1024L;
-
-         if (profilePhoto.getSize()
-                 > maxFileSize) {
-
-             throw new RuntimeException(
-                     "Profile photo must be less than 5 MB."
-             );
-         }
-
-         // =================================================
-         // FOLDER
-         // =================================================
-
-         String folderName;
-
-         if (student.getRole() != null
-                 && "ROLE_ADMIN".equalsIgnoreCase(
-                         student.getRole().getName())) {
-
-             folderName =
-                     "Admin photos";
-
-         } else if (student.getRole() != null
-                 && "ROLE_STUDENT".equalsIgnoreCase(
-                         student.getRole().getName())) {
-
-             folderName =
-                     "Student photos";
-
-         } else {
-
-             throw new RuntimeException(
-                     "Invalid user role."
-             );
-         }
-
-         String uploadDirectory =
-                 new File(
-                         "src/main/resources/static/uploads/Profile/"
-                                 + folderName
-                 ).getAbsolutePath();
-
-         File directory =
-                 new File(uploadDirectory);
-
-         if (!directory.exists()) {
-
-             if (!directory.mkdirs()) {
-
-                 throw new IOException(
-                         "Unable to create upload directory"
-                 );
-             }
-         }
-
-         // =================================================
-         // DELETE OLD PHOTO
-         // =================================================
-
-         String oldPhoto =
-                 student.getProfilePhoto();
-
-         if (oldPhoto != null
-                 && !oldPhoto.trim().isEmpty()) {
-
-             File oldFile =
-                     new File(
-                             directory,
-                             oldPhoto
-                     );
-
-             if (oldFile.exists()) {
-
-                 oldFile.delete();
-             }
-         }
-
-         // =================================================
-         // GET EXTENSION
-         // =================================================
-
-         String originalFileName =
-                 profilePhoto.getOriginalFilename();
-
-         String extension = "";
-
-         if (originalFileName != null
-                 && originalFileName.contains(".")) {
-
-             extension =
-                     originalFileName.substring(
-                             originalFileName.lastIndexOf(".")
-                     ).toLowerCase();
-         }
-
-         // =================================================
-         // CREATE UNIQUE FILE NAME
-         // =================================================
-
-         String fileName =
-                 UUID.randomUUID()
-                         .toString()
-                         + extension;
-
-         File saveFile =
-                 new File(
-                         directory,
-                         fileName
-                 );
-
-         profilePhoto.transferTo(
-                 saveFile
-         );
-
-         student.setProfilePhoto(
-                 fileName
-         );
-     }
-
-     // =================================================
-     // SAVE
-     // =================================================
-
-     Student updated =
-             repository.save(student);
-
-     // =================================================
-     // ROLE
-     // =================================================
-
-     String roleName = "ROLE_STUDENT";
-
-     if (updated.getRole() != null
-             && updated.getRole().getName() != null) {
-
-         roleName =
-                 updated.getRole().getName();
-     }
-
-     // =================================================
-     // ENTITY NAME
-     // =================================================
-
-     String entityName =
-             "ROLE_ADMIN".equalsIgnoreCase(roleName)
-                     ? "ADMIN"
-                     : "STUDENT";
-
-     // =================================================
-     // PROFILE UPDATE AUDIT
-     // =================================================
-
-     if (profileChanged) {
-
-         String profileMessage =
-                 "ROLE_ADMIN".equalsIgnoreCase(roleName)
-                         ? "Admin profile updated successfully"
-                         : "Student profile updated successfully";
-
-         auditLogService.createLog(
-                 updated.getId(),
-                 updated.getEmail(),
-                 roleName,
-                 "PROFILE_UPDATE",
-                 entityName,
-                 updated.getId(),
-                 profileMessage,
-                 ipAddress
-         );
-     }
-
-     // =================================================
-     // PHOTO UPDATE AUDIT
-     // =================================================
-
-     if (photoChanged) {
-
-         String photoMessage =
-                 "ROLE_ADMIN".equalsIgnoreCase(roleName)
-                         ? "Admin profile photo updated successfully"
-                         : "Student profile photo updated successfully";
-
-         auditLogService.createLog(
-                 updated.getId(),
-                 updated.getEmail(),
-                 roleName,
-                 "PHOTO_UPDATE",
-                 entityName,
-                 updated.getId(),
-                 photoMessage,
-                 ipAddress
-         );
-     }
- }
- 
- 
-
-    // =====================================================
-    // DASHBOARD COUNTS
-    // =====================================================
-
-    public long getTotalUsers() {
-
-        return repository.countByIsDeleted(
-                "false"
-        );
-    }
-
-
-    public long getTotalStudents() {
-
-        return repository
-                .countByRole_NameAndIsDeleted(
-                        "ROLE_STUDENT",
-                        "false"
-                );
-    }
-
-
-    public long getTotalAdmins() {
-
-        return repository
-                .countByRole_NameAndIsDeleted(
-                        "ROLE_ADMIN",
-                        "false"
-                );
-    }
-
-
-    public long getActiveCount() {
-
-        return repository
-                .countByStatusAndIsDeleted(
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
-    }
-
-
-    public long getActiveStudents() {
-
-        return repository
-                .countByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_STUDENT",
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
-    }
-
-
-    public long getActiveAdmins() {
-
-        return repository
-                .countByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_ADMIN",
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
-    }
-
-
-    // =====================================================
-    // DEPARTMENT
-    // =====================================================
-
-    public long getDepartmentCount() {
-
-        return repository.countDistinctDepartments();
-    }
-
-
-    public List<Object[]> getStudentCountByDepartment() {
-
-        return repository.getStudentCountByDepartment();
-    }
-
-
-    // =====================================================
-    // CITY
-    // =====================================================
-
-    public List<Object[]> getStudentCountByCity() {
-
-        return repository.getStudentCountByCity();
-
-    }
-
-    
-    
- // =====================================================
- // CHANGE PASSWORD
- // =====================================================
-
- public String changePassword(
-         String email,
-         String currentPassword,
-         String newPassword,
-         String ipAddress) {
-
-     Student student =
-             repository.findByEmailAndStatusAndIsDeleted(
-                     email,
-                     StudentStatus.ACTIVE,
-                     "false"
-             )
-             .orElse(null);
-
-     if (student == null) {
-         return null;
-     }
-
-     // =================================================
-     // CHECK CURRENT PASSWORD
-     // =================================================
-
-     if (!passwordEncoder.matches(
-             currentPassword,
-             student.getPassword())) {
-
-         return null;
-     }
-
-     // =================================================
-     // UPDATE PASSWORD
-     // =================================================
-
-     student.setPassword(
-             passwordEncoder.encode(newPassword)
-     );
-
-     Student updatedStudent =
-             repository.save(student);
-
-     // =================================================
-     // ROLE
-     // =================================================
-
-     String roleName = "ROLE_STUDENT";
-
-     if (updatedStudent.getRole() != null
-             && updatedStudent.getRole().getName() != null) {
-
-         roleName =
-                 updatedStudent.getRole().getName();
-     }
-
-     // =================================================
-     // MESSAGE
-     // =================================================
-
-     String message;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(roleName)) {
-
-         message =
-                 "Admin password changed successfully";
-
-     } else {
-
-         message =
-                 "Student password changed successfully";
-     }
-
-     // =================================================
-     // ENTITY NAME
-     // =================================================
-
-     String entityName;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(roleName)) {
-
-         entityName = "ADMIN";
-
-     } else if ("ROLE_STUDENT".equalsIgnoreCase(roleName)) {
-
-         entityName = "STUDENT";
-
-     } else {
-
-         entityName = "USER";
-     }
-
-     // =================================================
-     // AUDIT LOG
-     // =================================================
-
-     auditLogService.createLog(
-             updatedStudent.getId(),
-             updatedStudent.getEmail(),
-             roleName,
-             "PASSWORD_CHANGE",
-             entityName,
-             updatedStudent.getId(),
-             message,
-             ipAddress
-     );
-
-     return message;
- }
- 
- 
- 
 
     // =====================================================
     // SEARCH BY NAME
     // =====================================================
 
-    public List<Student> searchByName(
-            String name) {
-
-        return repository
-                .findByNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                        name,
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+    public List<Student> searchByName(String name) {
+        return repo.findByNameContainingIgnoreCase(name);
     }
 
 
@@ -1392,15 +187,8 @@ public class StudentService {
     // SEARCH BY EMAIL
     // =====================================================
 
-    public List<Student> searchByEmail(
-            String email) {
-
-        return repository
-                .findByEmailContainingIgnoreCaseAndStatusAndIsDeleted(
-                        email,
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+    public List<Student> searchByEmail(String email) {
+        return repo.findByEmailContainingIgnoreCase(email);
     }
 
 
@@ -1411,12 +199,9 @@ public class StudentService {
     public List<Student> searchByDepartment(
             String department) {
 
-        return repository
-                .findByDepartmentContainingIgnoreCaseAndStatusAndIsDeleted(
-                        department,
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+        return repo.findByDepartmentContainingIgnoreCase(
+                department
+        );
     }
 
 
@@ -1424,15 +209,8 @@ public class StudentService {
     // SEARCH BY CITY
     // =====================================================
 
-    public List<Student> searchByCity(
-            String city) {
-
-        return repository
-                .findByCityContainingIgnoreCaseAndStatusAndIsDeleted(
-                        city,
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+    public List<Student> searchByCity(String city) {
+        return repo.findByCityContainingIgnoreCase(city);
     }
 
 
@@ -1446,429 +224,358 @@ public class StudentService {
             String sortBy,
             String direction) {
 
-
         Sort sort =
-                direction.equalsIgnoreCase("asc")
-                        ? Sort.by(sortBy).ascending()
-                        : Sort.by(sortBy).descending();
-
+                direction != null
+                        && direction.equalsIgnoreCase("desc")
+                        ? Sort.by(sortBy).descending()
+                        : Sort.by(sortBy).ascending();
 
         Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
+                PageRequest.of(page, size, sort);
+
+        return repo.findAll(pageable);
+    }
 
 
-        return repository.findByStatusAndIsDeleted(
-                StudentStatus.ACTIVE,
-                "false",
-                pageable
+    // =====================================================
+    // LOGIN
+    // =====================================================
+
+    public Student login(
+            String email,
+            String password) {
+
+        return repo.findByEmailAndPassword(
+                email,
+                password
         );
     }
 
 
     // =====================================================
-    // FILTER + PAGINATION + SORTING
+    // SIGNUP - SIMPLE VERSION
     // =====================================================
 
-    public Page<Student> getStudentsByFilter(
-            String name,
-            String status,
-            int page,
-            int size,
-            String sortBy,
-            String direction) {
+    public Student signup(Student student) {
+
+        if (repo.existsByEmail(student.getEmail())) {
+            throw new EmailAlreadyExistsException(
+                    "Email already exists"
+            );
+        }
+
+        if (student.getStatus() == null) {
+            student.setStatus(
+                    StudentStatus.ACTIVE
+            );
+        }
+
+        if (student.getIsDeleted() == null) {
+            student.setIsDeleted("false");
+        }
+
+        return repo.save(student);
+    }
 
 
-        Sort sort =
-                direction.equalsIgnoreCase("asc")
-                        ? Sort.by(sortBy).ascending()
-                        : Sort.by(sortBy).descending();
+    // =====================================================
+    // SIGNUP
+    // USED BY LoginController
+    // =====================================================
 
+    public Student signup(
+            Student student,
+            String roleId,
+            MultipartFile profilePhoto,
+            String ipAddress,
+            Authentication authentication) {
 
-        Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
+        // -------------------------------------------------
+        // CHECK EMAIL
+        // -------------------------------------------------
+
+        if (student.getEmail() == null
+                || student.getEmail().isBlank()) {
+
+            throw new IllegalArgumentException(
+                    "Email is required"
+            );
+        }
+
+        boolean emailExists =
+                repo.existsByEmail(
+                        student.getEmail()
                 );
 
-
-        StudentStatus studentStatus =
-                null;
-
-
-        if (status != null
-                && !status.isEmpty()) {
-
-            studentStatus =
-                    StudentStatus.valueOf(
-                            status.toUpperCase()
-                    );
-        }
-
-
-        if (name != null
-                && !name.isEmpty()
-                && studentStatus != null) {
-
-            return repository
-                    .findByNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            name,
-                            studentStatus,
-                            "false",
-                            pageable
-                    );
-        }
-
-
-        if (name != null
-                && !name.isEmpty()) {
-
-            return repository
-                    .findByNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            name,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
-        }
-
-
-        if (studentStatus != null) {
-
-            return repository.findByStatusAndIsDeleted(
-                    studentStatus,
-                    "false",
-                    pageable
+        if (emailExists) {
+            throw new EmailAlreadyExistsException(
+                    "Email already exists"
             );
         }
 
 
-        return repository.findByStatusAndIsDeleted(
-                StudentStatus.ACTIVE,
-                "false",
-                pageable
+        // -------------------------------------------------
+        // ROLE
+        // -------------------------------------------------
+
+        if (roleId != null
+                && !roleId.isBlank()) {
+
+            Long id;
+
+            try {
+                id = Long.parseLong(roleId);
+
+            } catch (NumberFormatException e) {
+
+                throw new IllegalArgumentException(
+                        "Invalid role ID"
+                );
+            }
+
+            Role role =
+                    roleRepository.findById(id)
+                            .orElseThrow(() ->
+                                    new ResourceNotFoundException(
+                                            "Role not found with id : "
+                                                    + id
+                                    )
+                            );
+
+            student.setRole(role);
+        }
+
+
+        // -------------------------------------------------
+        // DEFAULT STATUS
+        // -------------------------------------------------
+
+        student.setStatus(
+                StudentStatus.ACTIVE
+        );
+
+
+        // -------------------------------------------------
+        // DEFAULT SOFT DELETE
+        // -------------------------------------------------
+
+        student.setIsDeleted("false");
+
+
+        // -------------------------------------------------
+        // PROFILE PHOTO
+        // -------------------------------------------------
+
+        boolean photoUploaded = false;
+
+        if (profilePhoto != null
+                && !profilePhoto.isEmpty()) {
+
+            try {
+
+                student.setProfilePhoto(
+                        profilePhoto.getBytes()
+                );
+
+                photoUploaded = true;
+
+            } catch (Exception e) {
+
+                throw new RuntimeException(
+                        "Unable to upload profile photo",
+                        e
+                );
+            }
+        }
+
+
+        // -------------------------------------------------
+        // SAVE
+        // -------------------------------------------------
+
+        Student savedStudent = repo.save(student);
+
+
+        // -------------------------------------------------
+        // AUDIT LOG - REGISTER
+        // -------------------------------------------------
+
+        String roleName = null;
+
+        if (savedStudent.getRole() != null) {
+            roleName =
+                    savedStudent.getRole().getName();
+        }
+
+        saveAuditLog(
+
+                "REGISTER",
+
+                "New user registered: "
+                        + savedStudent.getName()
+                        + " (" + savedStudent.getEmail() + ")",
+
+                savedStudent.getId(),
+
+                savedStudent.getName(),
+
+                savedStudent.getId(),
+
+                savedStudent.getEmail(),
+
+                roleName,
+
+                ipAddress
+        );
+
+
+        // -------------------------------------------------
+        // AUDIT LOG - PROFILE PHOTO
+        // -------------------------------------------------
+
+        if (photoUploaded) {
+
+            saveAuditLog(
+
+                    "PROFILE_PHOTO_UPDATE",
+
+                    "Profile photo uploaded during registration",
+
+                    savedStudent.getId(),
+
+                    savedStudent.getName(),
+
+                    savedStudent.getId(),
+
+                    savedStudent.getEmail(),
+
+                    roleName,
+
+                    ipAddress
+            );
+        }
+
+        return savedStudent;
+    }
+
+
+    // =====================================================
+    // TOTAL USERS
+    // =====================================================
+
+    public long getTotalUsers() {
+        return repo.count();
+    }
+
+
+    // =====================================================
+    // TOTAL STUDENTS
+    // =====================================================
+
+    public long getTotalStudents() {
+
+        return repo.countByRole_Name(
+                "ROLE_STUDENT"
         );
     }
 
 
     // =====================================================
-    // MANAGE STUDENTS ONLY
+    // TOTAL ADMINS
     // =====================================================
 
-    public Page<Student> searchOnlyStudents(
-            String keyword,
-            String department,
-            int page,
-            int size,
-            String sortField,
-            String sortDir) {
+    public long getTotalAdmins() {
 
-
-        Sort sort =
-                sortDir.equalsIgnoreCase("asc")
-                        ? Sort.by(sortField).ascending()
-                        : Sort.by(sortField).descending();
-
-
-        Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
-
-
-        if (keyword != null
-                && !keyword.trim().isEmpty()) {
-
-            return repository
-                    .findByRole_NameAndNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            "ROLE_STUDENT",
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
-        }
-
-
-        if (department != null
-                && !department.trim().isEmpty()) {
-
-            return repository
-                    .findByRole_NameAndDepartmentContainingIgnoreCaseAndStatusAndIsDeleted(
-                            "ROLE_STUDENT",
-                            department,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
-        }
-
-
-        return repository
-                .findByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_STUDENT",
-                        StudentStatus.ACTIVE,
-                        "false",
-                        pageable
-                );
+        return repo.countByRole_Name(
+                "ROLE_ADMIN"
+        );
     }
 
 
     // =====================================================
-    // SIMPLE LIST - ADMINS
+    // ACTIVE USERS
     // =====================================================
 
-    public List<Student> getAllAdmins() {
+    public long getActiveCount() {
 
-        return repository
-                .findByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_ADMIN",
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+        return repo.countByStatus(
+                StudentStatus.ACTIVE
+        );
     }
 
 
     // =====================================================
-    // SIMPLE LIST - STUDENTS
+    // ACTIVE STUDENTS
     // =====================================================
 
-    public List<Student> getAllStudentsOnly() {
+    public long getActiveStudents() {
 
-        return repository
-                .findByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_STUDENT",
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+        return repo.countByRole_NameAndStatus(
+                "ROLE_STUDENT",
+                StudentStatus.ACTIVE
+        );
     }
 
 
     // =====================================================
-    // RECENT REGISTRATION COUNT
+    // ACTIVE ADMINS
+    // =====================================================
+
+    public long getActiveAdmins() {
+
+        return repo.countByRole_NameAndStatus(
+                "ROLE_ADMIN",
+                StudentStatus.ACTIVE
+        );
+    }
+
+
+    // =====================================================
+    // DEPARTMENT COUNT
+    // =====================================================
+
+    public long getDepartmentCount() {
+
+        return repo.countDistinctDepartment();
+    }
+
+
+    // =====================================================
+    // RECENT STUDENT COUNT
     // =====================================================
 
     public long getRecentStudentCount() {
 
         LocalDateTime date =
-                LocalDateTime.now()
-                        .minusDays(7);
+                LocalDateTime.now().minusDays(7);
 
-
-        return repository.countRecentStudents(
-                date
-        );
+        return repo.countByCreatedDateAfter(date);
     }
 
 
     // =====================================================
-    // RECENT REGISTRATION LIST
+    // STUDENT COUNT BY DEPARTMENT
     // =====================================================
 
-    public List<Student> getRecentStudents() {
+    public List<Object[]> getStudentCountByDepartment() {
 
-        return repository
-                .findTop10ByStatusAndIsDeletedOrderByCreatedDateDesc(
-                        StudentStatus.ACTIVE,
-                        "false"
-                );
+        return repo.countStudentsByDepartment();
     }
 
 
- // =====================================================
- // SOFT DELETE USER
- // ADMIN CANNOT DELETE ANOTHER ADMIN
- // SHOW PARTICULAR ADMIN NAME IN ERROR MESSAGE
- // WITH IP ADDRESS + AUDIT LOG
- // =====================================================
+    // =====================================================
+    // STUDENT COUNT BY CITY
+    // =====================================================
 
- @Transactional
- public void softDelete(
-         Long id,
-         String ipAddress,
-         Authentication authentication) {
+    public List<Object[]> getStudentCountByCity() {
 
-     // =================================================
-     // FIND USER
-     // =================================================
+        return repo.countStudentsByCity();
+    }
 
-     Student student =
-             repository.findById(id)
-                     .orElseThrow(() ->
-                             new ResourceNotFoundException(
-                                     "Student not found with id : "
-                                             + id
-                             ));
-
-
-     // =================================================
-     // GET LOGGED-IN USER EMAIL
-     // =================================================
-
-     String loggedInEmail = null;
-
-     if (authentication != null) {
-
-         loggedInEmail =
-                 authentication.getName();
-     }
-
-
-     // =================================================
-     // PREVENT ADMIN FROM DELETING ANOTHER ADMIN
-     // =================================================
-
-     if (student.getRole() != null
-             && "ROLE_ADMIN".equalsIgnoreCase(
-                     student.getRole().getName())) {
-
-         // ---------------------------------------------
-         // If selected admin is NOT the logged-in admin
-         // ---------------------------------------------
-
-         if (loggedInEmail == null
-                 || !student.getEmail()
-                         .equalsIgnoreCase(
-                                 loggedInEmail
-                         )) {
-
-             throw new RuntimeException(
-                     "You cannot delete admin profile: "
-                             + student.getName()
-                             + "."
-             );
-         }
-     }
-
-
-     // =================================================
-     // SOFT DELETE
-     // =================================================
-
-     student.setIsDeleted(
-             "true"
-     );
-
-     student.setStatus(
-             StudentStatus.INACTIVE
-     );
-
-
-     // =================================================
-     // SAVE
-     // =================================================
-
-     Student deletedStudent =
-             repository.save(student);
-
-
-     // =================================================
-     // GET ROLE
-     // =================================================
-
-     String roleName =
-             "ROLE_STUDENT";
-
-     if (deletedStudent.getRole() != null
-             && deletedStudent.getRole().getName() != null) {
-
-         roleName =
-                 deletedStudent.getRole().getName();
-     }
-
-
-     // =================================================
-     // ENTITY NAME
-     // =================================================
-
-     String entityName;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(
-             roleName)) {
-
-         entityName =
-                 "ADMIN";
-
-     } else if ("ROLE_STUDENT".equalsIgnoreCase(
-             roleName)) {
-
-         entityName =
-                 "STUDENT";
-
-     } else {
-
-         entityName =
-                 "USER";
-     }
-
-
-     // =================================================
-     // DELETE MESSAGE
-     // =================================================
-
-     String message;
-
-     if ("ROLE_ADMIN".equalsIgnoreCase(
-             roleName)) {
-
-         message =
-                 "Admin deleted successfully";
-
-     } else if ("ROLE_STUDENT".equalsIgnoreCase(
-             roleName)) {
-
-         message =
-                 "Student deleted successfully";
-
-     } else {
-
-         message =
-                 "User deleted successfully";
-     }
-
-
-     // =================================================
-     // WHO PERFORMED THE ACTION
-     // =================================================
-
-     String performedBy =
-             "SYSTEM";
-
-     if (authentication != null
-             && authentication.getName() != null) {
-
-         performedBy =
-                 authentication.getName();
-     }
-
-
-     // =================================================
-     // AUDIT LOG
-     // =================================================
-
-     auditLogService.createLog(
-             deletedStudent.getId(),
-             performedBy,
-             roleName,
-             "DELETE",
-             entityName,
-             deletedStudent.getId(),
-             message,
-             ipAddress
-     );
- }
- 
- 
 
     // =====================================================
     // GET ALL USERS
-    // SEARCH + PAGINATION + SORTING
+    // SEARCH + ROLE + PAGINATION + SORTING
     // =====================================================
 
     public Page<Student> getAllUsers(
@@ -1879,74 +586,55 @@ public class StudentService {
             String sortField,
             String sortDir) {
 
-
         Sort sort =
-                sortDir.equalsIgnoreCase("asc")
-                        ? Sort.by(sortField).ascending()
-                        : Sort.by(sortField).descending();
-
+                sortDir != null
+                        && sortDir.equalsIgnoreCase("desc")
+                        ? Sort.by(sortField).descending()
+                        : Sort.by(sortField).ascending();
 
         Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
+                PageRequest.of(page, size, sort);
 
 
         if (keyword != null
                 && !keyword.trim().isEmpty()
                 && role != null
-                && !role.isBlank()) {
+                && !role.trim().isEmpty()) {
 
-            return repository
-                    .findByRole_NameAndNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            role,
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findByKeywordAndRole(
+                    keyword.trim(),
+                    role,
+                    pageable
+            );
         }
 
 
         if (keyword != null
                 && !keyword.trim().isEmpty()) {
 
-            return repository
-                    .findByNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findByKeyword(
+                    keyword.trim(),
+                    pageable
+            );
         }
 
 
         if (role != null
-                && !role.isBlank()) {
+                && !role.trim().isEmpty()) {
 
-            return repository
-                    .findByRole_NameAndStatusAndIsDeleted(
-                            role,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findByRole_Name(
+                    role,
+                    pageable
+            );
         }
 
 
-        return repository.findByStatusAndIsDeleted(
-                StudentStatus.ACTIVE,
-                "false",
-                pageable
-        );
+        return repo.findAll(pageable);
     }
 
 
     // =====================================================
     // GET ALL ADMINS
-    // SEARCH + PAGINATION + SORTING
     // =====================================================
 
     public Page<Student> getAllAdmins(
@@ -1956,48 +644,35 @@ public class StudentService {
             String sortField,
             String sortDir) {
 
-
         Sort sort =
-                sortDir.equalsIgnoreCase("asc")
-                        ? Sort.by(sortField).ascending()
-                        : Sort.by(sortField).descending();
-
+                sortDir != null
+                        && sortDir.equalsIgnoreCase("desc")
+                        ? Sort.by(sortField).descending()
+                        : Sort.by(sortField).ascending();
 
         Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
+                PageRequest.of(page, size, sort);
 
 
         if (keyword != null
                 && !keyword.trim().isEmpty()) {
 
-            return repository
-                    .findByRole_NameAndNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            "ROLE_ADMIN",
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findAdminsByKeyword(
+                    keyword.trim(),
+                    pageable
+            );
         }
 
 
-        return repository
-                .findByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_ADMIN",
-                        StudentStatus.ACTIVE,
-                        "false",
-                        pageable
-                );
+        return repo.findByRole_Name(
+                "ROLE_ADMIN",
+                pageable
+        );
     }
 
 
     // =====================================================
-    // GET ALL STUDENTS
-    // SEARCH + PAGINATION + SORTING
+    // GET ALL STUDENTS ONLY
     // =====================================================
 
     public Page<Student> getAllStudentsOnly(
@@ -2007,48 +682,60 @@ public class StudentService {
             String sortField,
             String sortDir) {
 
-
         Sort sort =
-                sortDir.equalsIgnoreCase("asc")
-                        ? Sort.by(sortField).ascending()
-                        : Sort.by(sortField).descending();
-
+                sortDir != null
+                        && sortDir.equalsIgnoreCase("desc")
+                        ? Sort.by(sortField).descending()
+                        : Sort.by(sortField).ascending();
 
         Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
+                PageRequest.of(page, size, sort);
 
 
         if (keyword != null
                 && !keyword.trim().isEmpty()) {
 
-            return repository
-                    .findByRole_NameAndNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            "ROLE_STUDENT",
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findStudentsByKeyword(
+                    keyword.trim(),
+                    pageable
+            );
         }
 
 
-        return repository
-                .findByRole_NameAndStatusAndIsDeleted(
-                        "ROLE_STUDENT",
-                        StudentStatus.ACTIVE,
-                        "false",
-                        pageable
-                );
+        return repo.findByRole_Name(
+                "ROLE_STUDENT",
+                pageable
+        );
     }
 
 
     // =====================================================
-    // RECENT REGISTRATIONS
-    // SEARCH + PAGINATION + SORTING
+    // GET ALL STUDENTS ONLY - EXPORT
+    // =====================================================
+
+    public List<Student> getAllStudentsOnly() {
+
+        return repo.findByRole_Name(
+                "ROLE_STUDENT"
+        );
+    }
+
+
+    // =====================================================
+    // GET ALL ADMINS - EXPORT
+    // =====================================================
+
+    public List<Student> getAllAdmins() {
+
+        return repo.findByRole_Name(
+                "ROLE_ADMIN"
+        );
+    }
+
+
+    // =====================================================
+    // GET RECENT STUDENTS
+    // PAGINATION + SEARCH + SORTING
     // =====================================================
 
     public Page<Student> getRecentStudents(
@@ -2058,394 +745,830 @@ public class StudentService {
             String sortField,
             String sortDir) {
 
-
-        // =================================================
-        // SORT
-        // =================================================
-
         Sort sort =
-                sortDir.equalsIgnoreCase("asc")
-                        ? Sort.by(sortField).ascending()
-                        : Sort.by(sortField).descending();
-
-
-        // =================================================
-        // PAGE
-        // =================================================
+                sortDir != null
+                        && sortDir.equalsIgnoreCase("desc")
+                        ? Sort.by(sortField).descending()
+                        : Sort.by(sortField).ascending();
 
         Pageable pageable =
-                PageRequest.of(
-                        page,
-                        size,
-                        sort
-                );
+                PageRequest.of(page, size, sort);
 
-
-        // =================================================
-        // SEARCH
-        // =================================================
 
         if (keyword != null
                 && !keyword.trim().isEmpty()) {
 
-            return repository
-                    .findByNameContainingIgnoreCaseAndStatusAndIsDeleted(
-                            keyword,
-                            StudentStatus.ACTIVE,
-                            "false",
-                            pageable
-                    );
+            return repo.findRecentStudentsByKeyword(
+                    keyword.trim(),
+                    pageable
+            );
         }
 
 
-        // =================================================
-        // ALL ACTIVE USERS
-        // =================================================
+        return repo.findRecentStudents(pageable);
+    }
 
-        return repository.findByStatusAndIsDeleted(
-                StudentStatus.ACTIVE,
-                "false",
-                pageable
+
+    // =====================================================
+    // GET RECENT STUDENTS - EXPORT
+    // =====================================================
+
+    public List<Student> getRecentStudents() {
+
+        return repo.findRecentStudents();
+    }
+
+
+    // =====================================================
+    // SOFT DELETE
+    // ADMIN DELETE STUDENT
+    // =====================================================
+
+    public void softDelete(
+            Long id,
+            String ipAddress,
+            Authentication authentication) {
+
+        Student student =
+                getStudentById(id);
+
+        student.setIsDeleted("true");
+
+        student.setStatus(
+                StudentStatus.INACTIVE
+        );
+
+        repo.save(student);
+
+
+        // -------------------------------------------------
+        // AUDIT LOG
+        // -------------------------------------------------
+
+        saveAuditLog(
+
+                "DELETE_STUDENT",
+
+                "Admin deleted student profile",
+
+                student.getId(),
+
+                student.getName(),
+
+                student.getId(),
+
+                getAuthenticationUsername(
+                        authentication,
+                        student.getEmail()
+                ),
+
+                getAuthenticationRole(authentication),
+
+                ipAddress
         );
     }
-    
-    
- // =====================================================
- // FIND STUDENT BY EMAIL
- // =====================================================
 
- public Optional<Student> findByEmail(String email) {
 
-     return repository.findByEmail(email);
- }
- 
- 
- 
- 
-//=====================================================
-//ADMIN UPDATE USER
-//ADMIN CAN EDIT STUDENT
-//ADMIN CANNOT EDIT ANOTHER ADMIN
-//WITH AUDIT LOG
-//=====================================================
+    // =====================================================
+    // DELETE OWN PROFILE
+    // USED BY ADMIN / STUDENT
+    // =====================================================
 
-@Transactional
-public void updateUserByAdmin(
-      Long id,
-      Student updatedStudent,
-      String ipAddress,
-      Authentication authentication) {
+    public void deleteOwnProfile(
+            String email,
+            String ipAddress,
+            Authentication authentication) {
 
-  // =================================================
-  // FIND EXISTING USER
-  // =================================================
+        Student student =
+                repo.findByEmail(email)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "User not found"
+                                )
+                        );
 
-  Student existingUser =
-          repository.findById(id)
-                  .orElseThrow(() ->
-                          new ResourceNotFoundException(
-                                  "User not found with ID: " + id
-                          ));
 
+        student.setIsDeleted("true");
 
-  // =================================================
-  // GET LOGGED-IN USER EMAIL
-  // =================================================
+        student.setStatus(
+                StudentStatus.INACTIVE
+        );
 
-  String loggedInEmail = null;
+        repo.save(student);
 
-  if (authentication != null
-          && authentication.getName() != null) {
 
-      loggedInEmail =
-              authentication.getName();
-  }
+        String role =
+                getStudentRole(student);
 
 
-  // =================================================
-  // PREVENT ADMIN FROM UPDATING ANOTHER ADMIN
-  // =================================================
+        // -------------------------------------------------
+        // ADMIN DELETE OWN PROFILE
+        // -------------------------------------------------
 
-  if (existingUser.getRole() != null
-          && "ROLE_ADMIN".equalsIgnoreCase(
-                  existingUser.getRole().getName())) {
+        if ("ROLE_ADMIN".equalsIgnoreCase(role)) {
 
-      if (loggedInEmail == null
-              || !existingUser.getEmail()
-                      .equalsIgnoreCase(
-                              loggedInEmail
-                      )) {
+            saveAuditLog(
 
-          throw new RuntimeException(
-                  "You cannot update another admin profile."
-          );
-      }
-  }
+                    "DELETE_OWN_PROFILE",
 
+                    "Admin deleted own profile",
 
-  // =================================================
-  // STORE OLD VALUES
-  // =================================================
+                    student.getId(),
 
-  String oldName =
-          existingUser.getName();
+                    student.getName(),
 
-  Integer oldAge =
-          existingUser.getAge();
+                    student.getId(),
 
-  String oldContactNo =
-          existingUser.getContactNo();
+                    getAuthenticationUsername(
+                            authentication,
+                            student.getEmail()
+                    ),
 
-  String oldDepartment =
-          existingUser.getDepartment();
+                    role,
 
-  String oldCity =
-          existingUser.getCity();
+                    ipAddress
+            );
 
-  String oldAddress =
-          existingUser.getAddress();
+        }
 
-  StudentStatus oldStatus =
-          existingUser.getStatus();
+        // -------------------------------------------------
+        // STUDENT DELETE OWN PROFILE
+        // -------------------------------------------------
 
+        else {
 
-  // =================================================
-  // CHECK WHETHER ANYTHING CHANGED
-  // =================================================
+            saveAuditLog(
 
-  boolean changed = false;
+                    "DELETE_OWN_PROFILE",
 
+                    "Student deleted own profile",
 
-  if (!java.util.Objects.equals(
-          oldName,
-          updatedStudent.getName())) {
+                    student.getId(),
 
-      changed = true;
-  }
+                    student.getName(),
 
+                    student.getId(),
 
-  if (!java.util.Objects.equals(
-          oldAge,
-          updatedStudent.getAge())) {
+                    getAuthenticationUsername(
+                            authentication,
+                            student.getEmail()
+                    ),
 
-      changed = true;
-  }
+                    role,
 
+                    ipAddress
+            );
+        }
+    }
 
-  if (!java.util.Objects.equals(
-          oldContactNo,
-          updatedStudent.getContactNo())) {
 
-      changed = true;
-  }
+    // =====================================================
+    // UPDATE USER BY ADMIN
+    // =====================================================
 
+    public Student updateUserByAdmin(
+            Long id,
+            Student updatedStudent,
+            String ipAddress,
+            Authentication authentication) {
 
-  if (!java.util.Objects.equals(
-          oldDepartment,
-          updatedStudent.getDepartment())) {
+        Student existingStudent =
+                getStudentById(id);
 
-      changed = true;
-  }
+        boolean profilePhotoChanged = false;
 
 
-  if (!java.util.Objects.equals(
-          oldCity,
-          updatedStudent.getCity())) {
+        // -------------------------------------------------
+        // NAME
+        // -------------------------------------------------
 
-      changed = true;
-  }
+        if (updatedStudent.getName() != null) {
 
+            existingStudent.setName(
+                    updatedStudent.getName()
+            );
+        }
 
-  if (!java.util.Objects.equals(
-          oldAddress,
-          updatedStudent.getAddress())) {
 
-      changed = true;
-  }
+        // -------------------------------------------------
+        // AGE
+        // -------------------------------------------------
 
+        existingStudent.setAge(
+                updatedStudent.getAge()
+        );
 
-  if (!java.util.Objects.equals(
-          oldStatus,
-          updatedStudent.getStatus())) {
 
-      changed = true;
-  }
+        // -------------------------------------------------
+        // CONTACT
+        // -------------------------------------------------
 
+        if (updatedStudent.getContactNo() != null) {
 
-  // =================================================
-  // UPDATE USER DETAILS
-  // =================================================
+            existingStudent.setContactNo(
+                    updatedStudent.getContactNo()
+            );
+        }
 
-  existingUser.setName(
-          updatedStudent.getName()
-  );
 
-  existingUser.setAge(
-          updatedStudent.getAge()
-  );
+        // -------------------------------------------------
+        // DEPARTMENT
+        // -------------------------------------------------
 
-  existingUser.setContactNo(
-          updatedStudent.getContactNo()
-  );
+        if (updatedStudent.getDepartment() != null) {
 
-  existingUser.setDepartment(
-          updatedStudent.getDepartment()
-  );
+            existingStudent.setDepartment(
+                    updatedStudent.getDepartment()
+            );
+        }
 
-  existingUser.setCity(
-          updatedStudent.getCity()
-  );
 
-  existingUser.setAddress(
-          updatedStudent.getAddress()
-  );
+        // -------------------------------------------------
+        // CITY
+        // -------------------------------------------------
 
+        if (updatedStudent.getCity() != null) {
 
-  // =================================================
-  // UPDATE STATUS
-  // =================================================
+            existingStudent.setCity(
+                    updatedStudent.getCity()
+            );
+        }
 
-  if (updatedStudent.getStatus() != null) {
 
-      existingUser.setStatus(
-              updatedStudent.getStatus()
-      );
-  }
+        // -------------------------------------------------
+        // ADDRESS
+        // -------------------------------------------------
 
+        if (updatedStudent.getAddress() != null) {
 
-  // =================================================
-  // DO NOT CHANGE ROLE
-  // =================================================
+            existingStudent.setAddress(
+                    updatedStudent.getAddress()
+            );
+        }
 
-  // Role remains unchanged.
 
+        // -------------------------------------------------
+        // STATUS
+        // -------------------------------------------------
 
-  // =================================================
-  // SAVE
-  // =================================================
+        if (updatedStudent.getStatus() != null) {
 
-  Student updatedUser =
-          repository.save(existingUser);
+            existingStudent.setStatus(
+                    updatedStudent.getStatus()
+            );
+        }
 
 
-  // =================================================
-  // GET TARGET USER ROLE
-  // =================================================
+        // -------------------------------------------------
+        // PROFILE PHOTO
+        // -------------------------------------------------
 
-  String targetRole = "ROLE_STUDENT";
+        if (updatedStudent.getProfilePhoto() != null) {
 
-  if (updatedUser.getRole() != null
-          && updatedUser.getRole().getName() != null) {
+            existingStudent.setProfilePhoto(
+                    updatedStudent.getProfilePhoto()
+            );
 
-      targetRole =
-              updatedUser.getRole().getName();
-  }
+            profilePhotoChanged = true;
+        }
 
 
-  // =================================================
-  // ENTITY NAME
-  // =================================================
+        // -------------------------------------------------
+        // SAVE
+        // -------------------------------------------------
 
-  String entityName;
+        Student savedStudent =
+                repo.save(existingStudent);
 
-  if ("ROLE_ADMIN".equalsIgnoreCase(
-          targetRole)) {
 
-      entityName = "ADMIN";
+        // -------------------------------------------------
+        // AUDIT LOG - ADMIN UPDATE
+        // -------------------------------------------------
 
-  } else if ("ROLE_STUDENT".equalsIgnoreCase(
-          targetRole)) {
+        saveAuditLog(
 
-      entityName = "STUDENT";
+                "UPDATE_USER",
 
-  } else {
+                "Admin updated user profile successfully",
 
-      entityName = "USER";
-  }
+                savedStudent.getId(),
 
+                savedStudent.getName(),
 
-  // =================================================
-  // WHO PERFORMED THE ACTION
-  // =================================================
+                savedStudent.getId(),
 
-  String performedBy = "SYSTEM";
+                getAuthenticationUsername(
+                        authentication,
+                        savedStudent.getEmail()
+                ),
 
-  if (authentication != null
-          && authentication.getName() != null
-          && !authentication.getName().trim().isEmpty()) {
+                getAuthenticationRole(authentication),
 
-      performedBy =
-              authentication.getName();
-  }
+                ipAddress
+        );
 
 
-  // =================================================
-  // GET ACTOR ROLE
-  // =================================================
+        // -------------------------------------------------
+        // AUDIT LOG - PROFILE PHOTO
+        // -------------------------------------------------
 
-  String performedByRole = "ROLE_ADMIN";
+        if (profilePhotoChanged) {
 
-  if (authentication != null
-          && authentication.getAuthorities() != null) {
+            saveAuditLog(
 
-      performedByRole =
-              authentication.getAuthorities()
-                      .stream()
-                      .map(authority ->
-                              authority.getAuthority())
-                      .filter(role ->
-                              role.equals("ROLE_ADMIN")
-                              || role.equals("ROLE_STUDENT"))
-                      .findFirst()
-                      .orElse("ROLE_ADMIN");
-  }
+                    "PROFILE_PHOTO_UPDATE",
 
+                    "Admin uploaded photo successfully",
 
-  // =================================================
-  // AUDIT LOG
-  // =================================================
+                    savedStudent.getId(),
 
-  if (changed) {
+                    savedStudent.getName(),
 
-      String message;
+                    savedStudent.getId(),
 
-      if ("ROLE_ADMIN".equalsIgnoreCase(
-              targetRole)) {
+                    getAuthenticationUsername(
+                            authentication,
+                            savedStudent.getEmail()
+                    ),
 
-          message =
-                  "Admin updated admin "
-                  + updatedUser.getEmail()
-                  + " successfully";
+                    getAuthenticationRole(authentication),
 
-      } else if ("ROLE_STUDENT".equalsIgnoreCase(
-              targetRole)) {
+                    ipAddress
+            );
+        }
 
-          message =
-                  "Admin updated student "
-                  + updatedUser.getEmail()
-                  + " successfully";
 
-      } else {
+        return savedStudent;
+    }
 
-          message =
-                  "Admin updated user "
-                  + updatedUser.getEmail()
-                  + " successfully";
-      }
 
+    // =====================================================
+    // UPDATE PROFILE
+    // USED BY STUDENT AND ADMIN FOR OWN PROFILE
+    // =====================================================
 
-      auditLogService.createLog(
-              updatedUser.getId(),
-              performedBy,
-              performedByRole,
-              "UPDATE",
-              entityName,
-              updatedUser.getId(),
-              message,
-              ipAddress
-      );
-  }
-}
+    public Student updateProfile(
+            String email,
+            Student updatedStudent,
+            MultipartFile profilePhoto,
+            String ipAddress) {
 
- 
+        Student student =
+                repo.findByEmail(email)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "Student not found with email : "
+                                                + email
+                                )
+                        );
+
+
+        boolean profilePhotoChanged = false;
+
+
+        // -------------------------------------------------
+        // NAME
+        // -------------------------------------------------
+
+        if (updatedStudent.getName() != null) {
+
+            student.setName(
+                    updatedStudent.getName()
+            );
+        }
+
+
+        // -------------------------------------------------
+        // AGE
+        // -------------------------------------------------
+
+        student.setAge(
+                updatedStudent.getAge()
+        );
+
+
+        // -------------------------------------------------
+        // CONTACT
+        // -------------------------------------------------
+
+        if (updatedStudent.getContactNo() != null) {
+
+            student.setContactNo(
+                    updatedStudent.getContactNo()
+            );
+        }
+
+
+        // -------------------------------------------------
+        // DEPARTMENT
+        // -------------------------------------------------
+
+        if (updatedStudent.getDepartment() != null) {
+
+            student.setDepartment(
+                    updatedStudent.getDepartment()
+            );
+        }
+
+
+        // -------------------------------------------------
+        // CITY
+        // -------------------------------------------------
+
+        if (updatedStudent.getCity() != null) {
+
+            student.setCity(
+                    updatedStudent.getCity()
+            );
+        }
+
+
+        // -------------------------------------------------
+        // ADDRESS
+        // -------------------------------------------------
+
+        if (updatedStudent.getAddress() != null) {
+
+            student.setAddress(
+                    updatedStudent.getAddress()
+            );
+        }
+
+
+        // -------------------------------------------------
+        // PROFILE PHOTO
+        // Student.profilePhoto = byte[]
+        // -------------------------------------------------
+
+        if (profilePhoto != null
+                && !profilePhoto.isEmpty()) {
+
+            try {
+
+                student.setProfilePhoto(
+                        profilePhoto.getBytes()
+                );
+
+                profilePhotoChanged = true;
+
+            } catch (Exception e) {
+
+                throw new RuntimeException(
+                        "Unable to upload profile photo",
+                        e
+                );
+            }
+        }
+
+
+        // -------------------------------------------------
+        // SAVE
+        // -------------------------------------------------
+
+        Student savedStudent =
+                repo.save(student);
+
+
+        // -------------------------------------------------
+        // GET ROLE
+        // -------------------------------------------------
+
+        String role =
+                getStudentRole(savedStudent);
+
+
+        // -------------------------------------------------
+        // AUDIT LOG - OWN PROFILE UPDATE
+        // -------------------------------------------------
+
+        String profileDescription;
+
+        if ("ROLE_ADMIN".equalsIgnoreCase(role)) {
+
+            profileDescription =
+                    "Admin updated profile successfully";
+
+        } else {
+
+            profileDescription =
+                    "Student updated profile successfully";
+        }
+
+
+        saveAuditLog(
+
+                "UPDATE_PROFILE",
+
+                profileDescription,
+
+                savedStudent.getId(),
+
+                savedStudent.getName(),
+
+                savedStudent.getId(),
+
+                savedStudent.getEmail(),
+
+                role,
+
+                ipAddress
+        );
+
+
+        // -------------------------------------------------
+        // AUDIT LOG - OWN PROFILE PHOTO
+        // -------------------------------------------------
+
+        if (profilePhotoChanged) {
+
+            String photoDescription;
+
+            if ("ROLE_ADMIN".equalsIgnoreCase(role)) {
+
+                photoDescription =
+                        "Admin uploaded photo successfully";
+
+            } else {
+
+                photoDescription =
+                        "Student uploaded photo successfully";
+            }
+
+
+            saveAuditLog(
+
+                    "PROFILE_PHOTO_UPDATE",
+
+                    photoDescription,
+
+                    savedStudent.getId(),
+
+                    savedStudent.getName(),
+
+                    savedStudent.getId(),
+
+                    savedStudent.getEmail(),
+
+                    role,
+
+                    ipAddress
+            );
+        }
+
+
+        return savedStudent;
+    }
+
+
+    // =====================================================
+    // CHANGE PASSWORD
+    // =====================================================
+
+    public String changePassword(
+            String email,
+            String oldPassword,
+            String newPassword,
+            String ipAddress) {
+
+        Student student =
+                repo.findByEmail(email)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(
+                                        "Student not found"
+                                )
+                        );
+
+
+        // -------------------------------------------------
+        // CHECK OLD PASSWORD
+        // -------------------------------------------------
+
+        if (student.getPassword() == null
+                || !passwordEncoder.matches(
+                        oldPassword,
+                        student.getPassword())) {
+
+            return null;
+        }
+
+
+        // -------------------------------------------------
+        // CHECK NEW PASSWORD IS DIFFERENT
+        // -------------------------------------------------
+
+        if (passwordEncoder.matches(
+                newPassword,
+                student.getPassword())) {
+
+            return "New password must be different from current password";
+        }
+
+
+        // -------------------------------------------------
+        // SAVE NEW PASSWORD
+        // -------------------------------------------------
+
+        student.setPassword(
+                passwordEncoder.encode(newPassword)
+        );
+
+        Student savedStudent =
+                repo.save(student);
+
+
+        // -------------------------------------------------
+        // GET ROLE
+        // -------------------------------------------------
+
+        String role =
+                getStudentRole(savedStudent);
+
+
+        // -------------------------------------------------
+        // AUDIT LOG - PASSWORD CHANGE
+        // -------------------------------------------------
+
+        String passwordDescription;
+
+        if ("ROLE_ADMIN".equalsIgnoreCase(role)) {
+
+            passwordDescription =
+                    "Admin changed password successfully";
+
+        } else {
+
+            passwordDescription =
+                    "Student changed password successfully";
+        }
+
+
+        saveAuditLog(
+
+                "PASSWORD_CHANGE",
+
+                passwordDescription,
+
+                savedStudent.getId(),
+
+                savedStudent.getName(),
+
+                savedStudent.getId(),
+
+                savedStudent.getEmail(),
+
+                role,
+
+                ipAddress
+        );
+
+
+        // -------------------------------------------------
+        // RETURN MESSAGE
+        // -------------------------------------------------
+
+        if (savedStudent.getRole() != null
+                && savedStudent.getRole().getName() != null
+                && "ROLE_ADMIN".equalsIgnoreCase(
+                        savedStudent.getRole().getName())) {
+
+            return "Admin password changed successfully";
+        }
+
+
+        return "Student password changed successfully";
+    }
+
+
+    // =====================================================
+    // SAVE AUDIT LOG
+    // CENTRAL METHOD
+    // =====================================================
+
+    private void saveAuditLog(
+            String action,
+            String description,
+            Long entityId,
+            String entityName,
+            Long studentId,
+            String username,
+            String role,
+            String ipAddress) {
+
+        try {
+
+            AuditLog auditLog =
+                    new AuditLog();
+
+            auditLog.setAction(action);
+
+            auditLog.setDescription(
+                    description
+            );
+
+            auditLog.setEntityId(
+                    entityId
+            );
+
+            auditLog.setEntityName(
+                    entityName
+            );
+
+            auditLog.setStudentId(
+                    studentId
+            );
+
+            auditLog.setUsername(
+                    username
+            );
+
+            auditLog.setRole(
+                    role
+            );
+
+            auditLog.setIpAddress(
+                    ipAddress
+            );
+
+            auditLog.setCreatedAt(
+                    LocalDateTime.now()
+            );
+
+            auditLogRepository.save(
+                    auditLog
+            );
+
+        } catch (Exception e) {
+
+            /*
+             * Audit logging must not break the
+             * actual business operation.
+             */
+
+            System.err.println(
+                    "Unable to save audit log: "
+                            + e.getMessage()
+            );
+        }
+    }
+
+
+    // =====================================================
+    // GET STUDENT ROLE
+    // =====================================================
+
+    private String getStudentRole(
+            Student student) {
+
+        if (student == null
+                || student.getRole() == null
+                || student.getRole().getName() == null) {
+
+            return null;
+        }
+
+        return student.getRole().getName();
+    }
+
+
+    // =====================================================
+    // GET AUTHENTICATION USERNAME
+    // =====================================================
+
+    private String getAuthenticationUsername(
+            Authentication authentication,
+            String defaultUsername) {
+
+        if (authentication != null
+                && authentication.isAuthenticated()
+                && authentication.getName() != null) {
+
+            return authentication.getName();
+        }
+
+        return defaultUsername;
+    }
+
+
+    // =====================================================
+    // GET AUTHENTICATION ROLE
+    // =====================================================
+
+    private String getAuthenticationRole(
+            Authentication authentication) {
+
+        if (authentication == null
+                || !authentication.isAuthenticated()
+                || authentication.getAuthorities() == null) {
+
+            return null;
+        }
+
+        return authentication.getAuthorities()
+                .stream()
+                .findFirst()
+                .map(authority ->
+                        authority.getAuthority())
+                .orElse(null);
+    }
+
 }
